# deep-voice

./: CMakeLists.txt  README.md
source/mfcc/: MfccFilter.cc  MfccFilter.h  MfccProcessor.cc  MfccProcessor.h  WavReader.cc  WavReader.h
src/: CMakeLists.txt  voice.cc
src/mfcc/: CMakeLists.txt  MfccFilter.h  MfccProcessor.cc  WavReader.cc  WavReader.h
test/: CMakeLists.txt  CMakeLists.txt.in
test/mfcc/: CMakeLists.txt  MfccFilter.test.cc  MfccProcessor.test.cc  MfccTestConfig.h.in  WavReader.test.cc
